# media_stream_analyzing

./: .gitignore  REAEME.md
.VSCodeCounter/2026-01-29_15-14-56/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-01-29_15-15-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cpp/: CMakeLists.txt  README.md
cpp/src/: Assignment.cpp  Assignment.h  CapFrameReader.cpp  CapFrameReader.h  DirFrameReader.cpp  DirFrameReader.h  DirFrameReaderLazy.cpp  DirFrameReaderLazy.h  FrameReader.h  Log.h  Manager.cpp  Manager.h  MediaWorker.cpp  MediaWorker.h  MessageWorker.cpp  MessageWorker.h  Model.cpp  Model.h  SafeQueue.h  TrtModel.cpp  TrtModel.h  TrtModelWorker.cpp  TrtModelWorker.h  WorkerThread.cpp  WorkerThread.h  main.cpp  main_coupling.cpp
info_client/: info_client.py
model_export/: example_model_to_onnx.py  onnx_to_engine.txt
python/: Manager.py  MediaStream.py  MessageServer.py  SafeQueue.py  TrtModel.py  main.py
res/: config.json  config2.json  config3.json  config_test_images_dir.json  config_test_speed.json
